--- a/admin/src/app/layout/news/components/news-detail/news-detail.component.html
+++ b/admin/src/app/layout/news/components/news-detail/news-detail.component.html
@@ -27,7 +27,7 @@
                 <p class="card-text" *ngIf="news.tags.length">
                     <i class="fa fa-tags"></i>
                     <span *ngFor="let tag of news.tags; let last = last;">
-                        {{ tag }}
+                        {{ tag.name }}
                         <span *ngIf="!last">, </span>
                     </span>
                 </p>
@@ -47,7 +47,7 @@
                 </p>
             </div>
             <div class="card-footer text-muted">
-                <span class="card-link">{{ news.domain }}</span>
+                <span class="card-link">{{ news.domain.name }}</span>
                 <a [href]="news.url_raw" class="card-link" target="_blank">
                     Original
                     <i class="fa fa-link"></i>
