--- a/admin/src/app/shared/components/sidebar/sidebar.component.html
+++ b/admin/src/app/shared/components/sidebar/sidebar.component.html
@@ -7,6 +7,9 @@
             <a routerLink="/news" [routerLinkActive]="['router-link-active']" class="list-group-item">
                 <i class="fa fa-fw fa-newspaper-o"></i> News
             </a>
+            <a routerLink="/flatpage" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                <i class="fa fa-fw fa-image"></i> Flat pages
+            </a>
             <hr>
             <a [routerLink]="['/login']" (click)="onLoggedout()" class="list-group-item">
                 <i class="fa fa-fw fa-power-off"></i> Log Out
