--- a/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
+++ b/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
@@ -26,7 +26,9 @@
             </div>
             <div class="form-group">
                 <label for="id_content">Content</label>
-                <div [froalaEditor]="editorConfig"></div>
+                <div [froalaEditor]="editorConfig"
+                     [(ngModel)]="flatpageForm.value.content"
+                     [ngModelOptions]="{standalone: true}"></div>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-success" [disabled]="!flatpageForm.valid">Create</button>
