--- a/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
+++ b/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
@@ -16,15 +16,22 @@
 
     <div class="col col-lg-12 col-md-12 col-xs-12 col-sm-12">
         <form [formGroup]="flatpageForm" (ngSubmit)="submit()">
-            <div class="form-group">
+            <div class="form-group" [ngClass]="{'has-danger': !flatpageForm.controls['title'].valid}">
                 <label for="id_title">Title</label>
-                <input type="text" class="form-control" id="id_title" placeholder="Title of new page" formControlName="title">
+                <input type="text" class="form-control" id="id_title" placeholder="Title of new page"
+                       formControlName="title"
+                       [ngClass]="{'form-control-danger': !flatpageForm.controls['title'].valid}" />
             </div>
-            <div class="form-group">
+            <div class="form-group" [ngClass]="{'has-danger': !flatpageForm.controls['slug'].valid}">
                 <label for="id_slug">Slug</label>
-                <input type="text" class="form-control" id="id_slug" placeholder="Slug name" formControlName="slug">
+                <input type="text" class="form-control" id="id_slug" placeholder="Slug name"
+                       formControlName="slug"
+                       [ngClass]="{'form-control-danger': !flatpageForm.controls['slug'].valid}" />
+                <small class="form-text text-muted">
+                    Slug should be the same: ""
+                </small>
             </div>
-            <div class="form-group">
+            <div class="form-group" [ngClass]="{'has-danger': !flatpageForm.controls['content'].valid}">
                 <label for="id_content">Content</label>
                 <div [froalaEditor]="editorConfig"
                      [(ngModel)]="flatpageForm.value.content"
