--- a/admin/src/app/layout/alert/alert.component.scss
+++ b/admin/src/app/layout/alert/alert.component.scss
@@ -1,6 +1,6 @@
 .outer-alerts {
-    position: absolute;
-    top: 50px;
+    position: fixed;
+    top: 60px;
     left: 20px;
     right: 20px;
     z-index: 9999;
