--- a/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
+++ b/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
@@ -9,7 +9,12 @@
                 <li class="breadcrumb-item">
                     <i class="fa fa-list"></i> <a href="Javascript:void(0)" [routerLink]="['/flatpage']">Flatpage list</a>
                 </li>
-                <li class="breadcrumb-item active"><i class="fa {{icon}}"></i>Create</li>
+                <li class="breadcrumb-item active" *ngIf="isCreated">
+                    <i class="fa fa-plus"></i> Create
+                </li>
+                <li class="breadcrumb-item active" *ngIf="!isCreated">
+                    <i class="fa fa-edit"></i> Edit "{{ flatpageForm.value.title }}"
+                </li>
             </ol>
         </div>
     </div>
@@ -28,6 +33,7 @@
                        formControlName="slug"
                        [ngClass]="{'form-control-danger': !flatpageForm.controls['slug'].valid}" />
                 <small class="form-text text-muted" *ngIf="!flatpageForm.controls['slug'].valid">
+                    Can be only eng letter, numbers or dash instead of a space.
                     Slug should be the same: "{{ slugExample }}"
                 </small>
             </div>
@@ -38,7 +44,10 @@
                      [ngModelOptions]="{standalone: true}"></div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-success" [disabled]="!flatpageForm.valid">Create</button>
+                <button type="submit" class="btn btn-success" [disabled]="!flatpageForm.valid">
+                    <span *ngIf="isCreated">Create</span>
+                    <span *ngIf="!isCreated">Update</span>
+                </button>
             </div>
         </form>
     </div>
