--- a/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
+++ b/admin/src/app/layout/flatpage/components/flatpage-detail/flatpage-detail.component.html
@@ -13,7 +13,7 @@
                     <i class="fa fa-plus"></i> Create
                 </li>
                 <li class="breadcrumb-item active" *ngIf="!isCreated">
-                    <i class="fa fa-edit"></i> Edit "{{ flatpageForm.value.title }}"
+                    <i class="fa fa-edit"></i> Edit "<span [innerText]="flatpageForm.value.title"></span>"
                 </li>
             </ol>
         </div>
@@ -33,15 +33,14 @@
                        formControlName="slug"
                        [ngClass]="{'form-control-danger': !flatpageForm.controls['slug'].valid}" />
                 <small class="form-text text-muted" *ngIf="!flatpageForm.controls['slug'].valid">
-                    Can be only eng letter, numbers or dash instead of a space.
-                    Slug should be the same: "{{ slugExample }}"
+                    Can be only eng letter, numbers or dash instead of a space
                 </small>
             </div>
             <div class="form-group" [ngClass]="{'has-danger': !flatpageForm.controls['content'].valid}">
                 <label for="id_content">Content</label>
-                <div [froalaEditor]="editorConfig"
-                     [(ngModel)]="flatpageForm.value.content"
-                     [ngModelOptions]="{standalone: true}"></div>
+                <textarea
+                        [froalaEditor]="editorConfig" formControlName="content"
+                        [ngClass]="{'form-control-danger': !flatpageForm.controls['content'].valid}"></textarea>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-success" [disabled]="!flatpageForm.valid">
