--- a/admin/src/app/layout/flatpage/components/flatpage-list/flatpage-list.component.html
+++ b/admin/src/app/layout/flatpage/components/flatpage-list/flatpage-list.component.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col col-lg-12 col-md-12 col-xs-12 col-sm-12">
-            <a routerLink="/flatpage/create" class="btn btn-success">
+            <a [routerLink]="['/flatpage', 'create']" class="btn btn-success pull-right">
                 <i class="fa fa-plus"></i> Create
             </a>
         </div>
@@ -12,11 +12,14 @@
                 <thead>
                     <tr>
                         <th scope="col">Title</th>
-                        <th scope="col">On site</th>
-                        <th scope="col">
-                            Views
+                        <th scope="col" class="text-center">
                             <i class="fa fa-eye"></i>
                         </th>
+                        <th scope="col" class="text-center">
+                            <i class="fa fa-comment"></i>
+                        </th>
+                        <th></th>
+                        <th scope="col">On site</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -26,12 +29,18 @@
                                 {{ page.title|slice:0:64 }}
                             </a>
                         </td>
+                        <td class="text-center">0</td>
+                        <td class="text-center">0</td>
+                        <td>
+                            <button class="btn btn-danger" (click)="removeFlatpage(page)">
+                                <i class="fa fa-trash-o"></i>
+                            </button>
+                        </td>
                         <td>
                             <a href="http://blocktimes.io/pages/{{ page.slug }}/" target="_blank">
-                                /pages/{{ page.slug }}
+                                Link
                             </a>
                         </td>
-                        <td>0</td>
                     </tr>
                 </tbody>
             </table>
