--- a/admin/src/app/layout/layout.component.html
+++ b/admin/src/app/layout/layout.component.html
@@ -1,4 +1,7 @@
-<app-alert></app-alert>
+<div class="outer-alerts">
+    <ngb-alert *ngFor="let alert of alerts"
+               [type]="geType(alert)" (close)="removeAlert(alert)">{{ alert.message }}</ngb-alert>
+</div>
 <app-header></app-header>
 <app-sidebar></app-sidebar>
 <section class="main-container">
