--- a/admin/src/app/layout/layout.component.scss
+++ b/admin/src/app/layout/layout.component.scss
@@ -14,3 +14,11 @@
         margin-left: 0px !important;
     }
 }
+
+.outer-alerts {
+    position: fixed;
+    top: 60px;
+    left: 20px;
+    right: 20px;
+    z-index: 9999;
+}
