--- a/admin/src/app/layout/flatpage/components/flatpage-list/flatpage-list.component.html
+++ b/admin/src/app/layout/flatpage/components/flatpage-list/flatpage-list.component.html
@@ -7,6 +7,8 @@
                 <i class="fa fa-plus"></i> Create
             </a>
         </div>
+    </div>
+    <div class="row">
         <div class="col col-lg-12 col-md-12 col-xs-12 col-sm-12 table-responsive" style="margin-top: 10px;">
             <table class="table table-hover">
                 <thead>
@@ -18,6 +20,7 @@
                         <th scope="col" class="text-center">
                             <i class="fa fa-comment"></i>
                         </th>
+                        <th></th>
                         <th></th>
                         <th scope="col">On site</th>
                     </tr>
@@ -31,6 +34,9 @@
                         </td>
                         <td class="text-center">0</td>
                         <td class="text-center">0</td>
+                        <td>
+                            <ui-switch [(ngModel)]="page.is_show" (change)="setEnable(page, $event)"></ui-switch>
+                        </td>
                         <td>
                             <button class="btn btn-danger" (click)="removeFlatpage(page)">
                                 <i class="fa fa-trash-o"></i>
